--- a/PetShop/app/src/main/res/values/strings.xml
+++ b/PetShop/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">PetShop</string>
+    <string name="btn_admin">Admin</string>
+    <string name="btn_user">Normal User</string>
 </resources>
