Adicionando telas do projeto de petshop

--- a/PetShop/app/src/main/res/values/strings.xml
+++ b/PetShop/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">PetShop</string>
     <string name="btn_admin">Admin</string>
     <string name="btn_user">Normal User</string>
+    <string name="achado">Achados</string>
+    <string name="perdido">Perdidos</string>
+    <string name="sair">Sair</string>
+    <string name="add">Adicionar</string>
 </resources>
