--- a/DaviClima/app/src/main/res/values/strings.xml
+++ b/DaviClima/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Clima</string>
     <string name="add">Adicionar Cidade</string>
+    <string name="cidade">Cidade</string>
+    <string name="srch">Buscar</string>
 </resources>
