--- a/PetShop/app/src/main/res/values/strings.xml
+++ b/PetShop/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">PetShop</string>
     <string name="btn_admin">Admin</string>
     <string name="btn_user">Normal User</string>
-    <string name="petshop">Petshop</string>
+    <string name="petshop">Adocao</string>
     <string name="perdido">Achados/Perdidos</string>
     <string name="sair">Sair</string>
     <string name="add">Adicionar</string>
